fix sliding menu behind page not repsonse to click when sliding menu is put inside Tabbar

--- a/app/css/sliding_menu.css
+++ b/app/css/sliding_menu.css
@@ -18,7 +18,7 @@
 }
 
 .behind {
-    z-index: -1;
+    
 }
 
 .above {
